1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m: Note use of access from misc.h.

	* VarProbe.m ([VarProbe -setProbedVariable:]): Use xfree instead
	of free.
	([VarProbe -createEnd]): Use xmalloc instead of malloc.
	([VarProbe -free]): Use xfree instead of free.

	* Arguments.m, MessageProbe.m, VarProbe.m: Don't include stdlib.h.

	* MessageProbe.m: Undef PACKAGE and VERSION after including
	ffi.h.

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Split VarProbe into new features vs. user
	presentation.

	* VarProbe.m: Add phase tags.

	* VarProbe.h: Include objectbase.h.
	(VarProbe): Adopt to _VarProbe.

1998-07-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VarProbe.h (VarProbe): Rename interactive to interactiveFlag.
	Make it boolean.

	* VarProbe.[hm], objectbase.h: Rename isInteractive to
	getInteractiveFlag.

	* objectbase.h: Minor reformatting of documentation.

1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m, MessageProbe.m: Include misc things last.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeMap.m, VarProbe.m: Include misc.h instead of string.h.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (Probe): Add argument to setProbeClass.

	* CustomProbeMap.m: Include stdarg.h first to avoid problems on
	Redhat 5.
	
1998-07-06  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h (Arguments): Further clarify use of Arguments with
	main.m program fragment in Example.

1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (version.h): Quote SWARM_VERSION value.
	($(libobjectbase_la_OBJECTS)): Depend on version.h.
	(objectbase_HEADERS): Remove version.h.
	(install-data-local): New rule.

1998-06-24  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h: (Arguments): Add protocol.  Add documentation
	description for Arguments, including long example marked-up with
	//E:.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
